css/style.css
body {
    margin: 0;
    padding: 50px 0 0 0;
    width:1600px;
    background:#fffff9;
    overflow-x: hidden;
}

::-webkit-scrollbar {
    width: 0px;  /* remove scrollbar space */
    background: transparent; 
}

#background {
    
    min-width: 900px; 
    padding: 40px;
    overflow: auto;
    position: relative;
      
}

/*::-webkit-scrollbar { 
    display: none; 
}*/

/*------------ Fonts -------------*/

/*font-family: 'Raleway', sans-serif;*/

/*---------- Containers ----------*/

#containerintro {
    width: 100%;
    min-width: 800px;
    height: 530px;
    margin-bottom: 50px;
    overflow: hidden;
    z-index: -1;
    /*min-height: 400px;*/
    /*border: 2px solid orange;*/
}

    .columns {
        position: relative;
        overflow: hidden;
        height: 100%;
		z-index:0;
    }

        .columnA {
            width: 220px;
            margin-top: 150px;

            /*border: 2px solid green;*/            
            overflow: hidden;
            float: left;
        }


            .columnB::-webkit-scrollbar {
                display: block;
                width:8px; 
            }

            .columnB::-webkit-scrollbar * {
              background:transparent;
            }
            .columnB::-webkit-scrollbar-thumb {
              background:#999 !important;
            }

        .columnB {
            float: left;
            width: 500px;
            height: 270px;
            /*border: 2px solid red;*/
            margin: 146px 24px 0 245px;
            padding-right: 8px;
            overflow-y: auto;
        }

            .columnB:hover, .columnB:active, .columnB:focus {
              overflow-y: auto; }
            
        

        .columnC {
            float: left;
            width: 360px;
            overflow: visible;
            /*border: 2px solid orange;*/
        }

#containermap {
    width: 100%;
    height: 700px;
    
    /*min-height: 600px;*/
    /*background-color: #eee;  */
}


    .plot {
        overflow: hidden;
        float:left;
        width: 75%;
        height: 600px;

        /*background-color: #eee;*/
        /*margin-left: -40px;*/
    }

    /*.extent {
      stroke: solid 6px black;
      fill-opacity: 0;
      shape-rendering: crispEdges;
    }*/

    .brush .selection {
      stroke-width: 2px;
      stroke: green;
      fill-opacity: 0;
      shape-rendering: crispEdges;
    }

#containeroutro {
    width: 100%;
    min-width: 800px;
    height: 30px;
    margin-top: 40px;
    /*min-height: 400px;*/
    /*border: 2px solid red;*/   
}

        .design_row, .data_row, .additional_row {
			display:block;
            position: relative;
			margin-left:auto;
			margin-right:auto;
			float:left;
			width:33%;	
			height:100%;
        } 

        .st1, .st2, .st3 {
            width:150px;
            margin-right:22px;
            float:left;
            text-align: right;
        }

        .contains_text {
            float:left;
            width:250px;
            /*border: solid orange 2px;*/
        }

        .contains_text > p {
            text-align: left;
        }

        .contains_text > .pp {
            margin-top: 18px;
        }


/*-------- Title & Intro --------*/
h1, h2, p {
    font-family: 'Raleway', sans-serif;
    margin: 0;
}

    p {
        /*margin-bottom: 22px;*/
        letter-spacing: .05em;
    }

    h2 {
        font-style: italic;
    }

.title, .subtitle {
    line-height: 18px;
    text-align: right;
    vertical-align: bottom;
    margin-right: 20px;
}

    .title {
        font-size: 28px;
        font-weight: 700;
        padding-top: 7px;
    }

    .subtitle {
        font-size: 16px;
        line-height: 16px;
        font-weight: 200;
    }

        .where {
            line-height: 30px;
            
        }


.text {
    font-weight: 400;
    font-size: 12px;
    line-height: 18px;
    position: relative;
    float: left;
    text-align: justify;
    text-justify: inter-word;
    width: 100%;
}

    .p2 {
        text-indent: 22px;
    }

    .p1 {
        text-indent: 0px;
    }

    .extra_line {
        margin-top: 36px;
    }


/*------------ Legend -----------*/

.title_legend {
    position: relative;
    float:right;
    /*height:100px;*/
    margin: 12px 20px 0 0;

}
.row {
        position: relative;
        float:left;
        height:18px;
        width: 100%;
        /*margin-right: -22px;*/
}

    .tiny {
    position: relative;
    float:right;
    font-weight: 200;
    font-size: 10px;
    line-height: 18px;
    width: 150px;
    text-align: right;
    }

	.tiny2 {
		position: relative;
		float:left;
		font-weight: 200;
		font-size: 10px;
		line-height: 18px;
		width: 190px;
		margin-left: 50px;
		text-align: center;
		border-top: solid #aaa 1px;
		padding-top: 4px;
	}

    .icons {
        margin-left: 6px;
        position: relative;
        float:right;
    }

	.school_icon {
		background-color:#171717;
		width:8px;
        height:8px;
		margin-top:5px;
	}
	
	.snf_icon {
		margin-top:6px;
		width:4px;
		height:4px;
		background:rgb(255,0,0);
		-moz-border-radius: 2px;
		-webkit-border-radius: 2px;
		border-radius: 2px;
	}
	
	.mapLegend_icon {
		width:8px;
        height:8px;
		margin-top:5px;
	}
	
/*----------- Chart -----------*/

.chart {
    width: 350px;
    height: 596px;
    background: none;
    margin-top: -5px;
	position:relative;
	z-index:1;
}

.toolTip {
	font-family: Raleway;
	font-weight: 700;
}

    #chart_label {
        margin-top: -10px;
        
    }

/*------------ Map ------------*/
/*#plot{
    width: 65%;
    height: 720px;
    position: relative;
    float:left;
}*/

.overlay {
    background-color: transparent;
    pointer-events: all;
}

.neighborhoods {
    stroke: #eee;
    fill: #fff;
    stroke-linejoin: 'round';
    stroke-width: .5;
}

.square_school {
    background-color: blue;
    stroke: darkblue;
    stroke-width: .5;
}



/*-------------------Module---------------*/

.axis .domain{
    display:none;
}
.axis line{
    stroke: white;
    stroke-width: 0.8;
    opacity: 0.9;
}
.axis text{
    font-size: 10px;
    color: rgb(200,200,200);
}

.label .label-y text{
    stroke: none;
    font-size: 11px;
    font-weight: 100;
    color: red;
}

.value .value-x text{
    stroke: none;
    font-size: 10px;
    color: red;
}




#f {
    /*background:#eee;
    opacity: 0.99;*/
    padding:20px;
    width:400px;
    position:fixed; top:150px; left:0px;
}

#ff {
    position:relative; top:88px; left:1080px;
    z-index:0;
}

#fff {
	position:relative;
	z-index:5;
}
 
   




    #svg_clear {
        z-index: 1;
        /*display: none;*/
        border: 2px solid blue;
        /*box-shadow: inset 0px 0px 0px 1px #aaa;
        box-sizing: border-box;*/ /* Include padding and border in element's width and height */
    }

#footer {
   position:fixed;
   left:0px;
   bottom:0px;
   height:150px;
   width:100%;
   -webkit-transition: height 2s;
   background:#fffff9;
   transition: height 2s;
}

